[build-system]
requires = ["setuptools>=61.0", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"

[project]
dynamic = ["version"]
name = "remlaverlib"
authors = [
    { name = "Rohan Sobha", email = "r.r.sobha@student.tudelft.nl" }
]
description = "A simple library that returns its own version"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]