[tool.poetry]
name = "remlaverlib"
version = "0.0.0"
authors = [
    "Radek Kargul <r.kargul@student.tudelft.nl>",
    "Rohan Sobha <r.r.sobha@student.tudelft.nl>",
    "Konstantinos Andriopoulos <a.konstantinos@student.tudelft.nl>",
    "Andrei Ionescu <a.c.ionescu-1@student.tudelft.nl>"
]
description = "A simple library that returns its own version."
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
packages = [{ include = "src/remlaverlib" }]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pylint = "^2.2.12"
dslinter = "2.0.9"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
