[tool.poetry]
name = "remlaverlib"
version = "0.0.0"
authors = [
    "Radek Kargul <r.kargul@student.tudelft.nl>",
    "Rohan Sobha <r.r.sobha@student.tudelft.nl>",
    "Konstantinos Andriopoulos <a.konstantinos@student.tudelft.nl>",
    "Andrei Ionescu <a.c.ionescu-1@student.tudelft.nl>"
]
description = "A simple library that returns its own version."
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
packages = [{ include = "remlaverlib", from = "src" }]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
bandit = "^1.7.5"
pylint = "^2.2.12"
dslinter = "2.0.9"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
